# finance-home-app

./: Cargo.toml  index.html  styles.css
core/: Cargo.toml  core_api.rs
src/: app.rs  main.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: credentials_form.rs  expense_card.rs  expense_form.rs  mod.rs
