[package]
name = "core_api"
version = "0.1.0"
edition = "2021"
description = "Some standard things."

[lib]
name = "core_api"
path = "core_api.rs"

[dependencies]
leptos = { version = "0.5", features = ["csr"] }
thiserror = "1.0"
time = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.5", features = ["serde", "v4"] }
